fix: modal opened off center with the package updates

--- a/src/index.css
+++ b/src/index.css
@@ -544,21 +544,25 @@ div[data-slot="dialog-content"][data-state="closed"] {
 @keyframes scaleInContent {
   from {
     opacity: 0;
-    transform: translate(-50%, -48%) scale(0.96);
+    translate: -50% -48%;
+    scale: 0.96;
   }
   to {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    translate: -50% -50%;
+    scale: 1;
   }
 }
 
 @keyframes scaleOutContent {
   from {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    translate: -50% -50%;
+    scale: 1;
   }
   to {
     opacity: 0;
-    transform: translate(-50%, -48%) scale(0.96);
+    translate: -50% -48%;
+    scale: 0.96;
   }
 }
